<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alliejc.wcstinder.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:layout_alignParentTop="true">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/select_level_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/select_level_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_your_wsdc_level"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:theme="@style/HeaderText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/expand_collapse_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_less"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"/>
        </RelativeLayout>


        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_level_header"
            app:el_duration="1000"
            app:el_expanded="true"
            app:el_parallax="0.5">

            <RadioGroup
            android:id="@+id/level_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
                android:layout_below="@id/select_level_text">

            <RadioButton
                android:id="@+id/newcomer_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newcomer"
                android:textSize="12sp"
                android:focusedByDefault="true"/>
            <RadioButton
                android:id="@+id/novice_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/novice"/>
            <RadioButton
                android:id="@+id/intermediate_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/intermediate"/>
            <RadioButton
                android:id="@+id/advanced_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/advanced"/>
            <RadioButton
                android:id="@+id/allstar_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/all_star"/>
        </RadioGroup>
        </net.cachapa.expandablelayout.ExpandableLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/role_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expandable_layout"
            android:background="@color/white"
            app:tabGravity="fill">

            <android.support.design.widget.TabItem
                android:id="@+id/leader_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:textSize="20sp"
                android:text="Leader" />

            <android.support.design.widget.TabItem
                android:id="@+id/follow_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Follower" />
        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/role_tablayout">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

</RelativeLayout>
